<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/layoutMain"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    
    <android.support.v7.widget.Toolbar
      android:id="@+id/tbPrefs"
      android:minHeight="?attr/actionBarSize"  
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:titleTextColor="@android:color/white"
      android:background="@color/lightgreen">
    </android.support.v7.widget.Toolbar>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp" 
        android:gravity="center_vertical"
         android:id="@+id/layoutColor0"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvColorNotStarted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/color0"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        
    

    </LinearLayout>
    
    
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp" 
        android:gravity="center_vertical"
        android:id="@+id/layoutColor1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvColorStarted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/color1"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        


    </LinearLayout>
    
        
            <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical"
         android:id="@+id/layoutColor2" 
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvColorEnded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/color2"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        
    

    </LinearLayout>
    
    

</LinearLayout>